--- a/src/master.scss
+++ b/src/master.scss
@@ -3,4 +3,5 @@
 @import 'partials/_mix.scss';
 @import 'partials/_header.scss';
 @import 'partials/_navbar.scss';
+@import 'partials/_jumbo.scss';
 @import 'partials/_footer.scss';
