--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,6 +1,10 @@
 $primary_color: #101010;
 $second_color: #009CFF;
 $text_color: #ffffff;
+$back_color: #E8E8E8;
+$list_color: #4d4d4d;
 $font_small: 14px;
 $font_medium: 16px;
+$font_big: 30px;
+$font_h4: 21px;
 $p_jumbo: 20px;
