--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -9,6 +9,10 @@
   margin: 0 auto;
 }
 
+main {
+  background-color: #E8E8E8;
+}
+
 ul {
   list-style-type: none;
 }
@@ -43,8 +47,32 @@ footer a:hover {
   margin-top: 45px;
 }
 
+.mt-70 {
+  margin-top: 70px;
+}
+
 .mt-20 {
   margin-top: 20px;
+}
+
+.mb-45 {
+  margin-bottom: 45px;
+}
+
+.pt-45 {
+  padding-top: 45px;
+}
+
+.pb-45 {
+  padding-bottom: 45px;
+}
+
+.pb-25 {
+  padding-bottom: 25px;
+}
+
+.text-cent {
+  text-align: center;
 }
 
 button {
@@ -129,4 +157,155 @@ button {
 
 .logo-2021 img {
   width: 250px;
+}
+
+h2.text-cent {
+  color: #101010;
+  font-size: 30px;
+  letter-spacing: 2px;
+}
+
+.card .card-child {
+  width: calc(100%/3);
+  display: flex;
+  flex-direction: column;
+  padding: 0 15px;
+}
+.card .card-child img {
+  width: 100%;
+}
+.card .card-child .under-image {
+  height: 180px;
+  background-color: #ffffff;
+  padding: 20px;
+}
+.card .card-child .under-image h4 {
+  font-size: 21px;
+}
+.card .card-child .under-image p {
+  font-size: 17px;
+}
+.card .card-child .under-image a {
+  position: relative;
+  top: 20px;
+  font-size: 17px;
+  color: #009CFF;
+}
+.card .card-child .under-image a:hover {
+  text-decoration: underline;
+}
+
+.row {
+  flex-wrap: nowrap;
+  display: flex;
+  margin: 0 15px;
+}
+.row .window-child {
+  width: 50%;
+  height: 350px;
+}
+.row .window-child img {
+  width: 100%;
+  height: 350px;
+}
+.row .window-child h2 {
+  color: #ffffff;
+  font-size: 30px;
+}
+.row .window-child p {
+  margin-top: 25px;
+  color: #ffffff;
+  font-size: 18px;
+}
+.row .window-child button {
+  margin-top: 40px;
+}
+.row .back-vio {
+  background-color: #3C1567;
+  padding: 60px;
+}
+.row .back-grey {
+  background-color: #3C3C3C;
+  padding: 60px;
+}
+.row .back-sky {
+  background-color: #009CFF;
+  padding: 60px;
+}
+
+#wacom-over {
+  position: relative;
+  bottom: 300px;
+  z-index: 1;
+  height: 250px;
+  width: 430px;
+}
+
+.links-child {
+  width: 25%;
+  padding: 15px;
+}
+.links-child ul li:first-of-child {
+  margin-top: 15px;
+}
+.links-child ul li {
+  padding-top: 5px;
+}
+.links-child ul li a {
+  color: #4d4d4d;
+  font-size: 14px;
+}
+.links-child ul li a:hover {
+  text-decoration: underline;
+}
+.links-child .social {
+  display: flex;
+}
+.links-child .social li {
+  padding-right: 10px;
+}
+.links-child .social li a i {
+  font-size: 40px;
+}
+
+.social .fa-instagram-square {
+  color: #E4405F;
+}
+.social .fa-facebook-square {
+  color: #3B5998;
+}
+.social .fa-twitter-square {
+  color: #1DA1F2;
+}
+.social .fa-youtube-square {
+  color: #CD201F;
+}
+.social .fa-pinterest-square {
+  color: #BD081C;
+}
+.social .fa-rss-square {
+  color: #FF8D00;
+}
+
+footer {
+  height: 90px;
+  background-color: #101010;
+  display: flex;
+  align-items: center;
+}
+footer > div {
+  justify-content: space-between;
+  align-items: center;
+}
+footer > div .logo-footer img {
+  padding-left: 20px;
+}
+footer > div .copyright {
+  display: flex;
+}
+footer > div .copyright > * {
+  padding-right: 20px;
+}
+footer > div .copyright p {
+  color: #ffffff;
 }
