--- a/src/master.scss
+++ b/src/master.scss
@@ -4,4 +4,7 @@
 @import 'partials/_header.scss';
 @import 'partials/_navbar.scss';
 @import 'partials/_jumbo.scss';
+@import 'partials/_first-main.scss';
+@import 'partials/_second-main.scss';
+@import 'partials/_third-main.scss';
 @import 'partials/_footer.scss';
